added .nvmrc, updated readme, added engine into package.jso

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nodepayu",
   "version": "1.0.0",
   "description": "A node client for Payu Turkey provider.",
+  "engines" : {
+    "node" : ">=6.10.3"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
